[package]
name = "luau-ast-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["lua",  "luau",  "roblox",  "ast", "parser"]
description = "A Parser and AST for Luau and Lua5.1 written in Rust"
exclude = [
    "tree-sitter-luau"
]
repository = "https://github.com/cassanof/luau-ast-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.164", features = ["derive"], optional = true }
thiserror = "1.0.40"
tree-sitter = "0.20.10"
luau-ast-rs-grammar = { version = "0.0.1", path = "./tree-sitter-luau" }
